cmake_minimum_required(VERSION 3.0.2)
project (CALCULATOR)
set(CMAKE_SYSTEM_NAME Linux)
set(CMAKE_SYSTEM_VERSION 1)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -UNDEBUG -fvisibility=hidden")
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_VERBOSE_MAKEFILE on)
set ( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/." )
set( C2Serve_ROOT_DIR "." )
find_package( C2Serve )
if ( C2Serve_FOUND )
  include_directories( ${C2Serve_INCLUDE_DIRS} )
  add_executable( calculator C2SCalculatorMain.cpp C2SCalculatorRestMethodPrototype.cpp C2SCalculatorController.cpp)
  target_link_libraries( calculator ${C2Serve_LIBRARIES} -lpthread)
endif ( C2Serve_FOUND )